2006-07-13  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libcola/cola.h,
	  src/libcola/connected_components.cpp,
	  src/graphlayout/graphlayout.cpp:
	  Disconnected graphs are now handled more gracefully,
	  connected components are arranged separated (in place) and
	  then overlaps between components are removed.

2006-07-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/Makefile_insert, src/Makefile.am, src/svg/Makefile_insert,
	  src/xml/Makefile_insert, src/libnr/Makefile_insert:
	  Add "$(srcdir)/" to some things so that "make check" works in 
	  the case that the build directory is somewhere other than the
	  source directory.

	* src/sp-conn-end-pair.cpp, src/connector-context.cpp,
	  src/document.cpp, src/libavoid/*:
	  Update libavoid with upstream fixes, optimisations and new features.

2006-07-13  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libvpsc/*,
	  src/graphlayout/graphlayout.cpp:
	  Toggle on connector toolbar can force connectors with 
	  end-markers (arrows) to point downwards

2006-07-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/libavoid/router.cpp: Fixed a bug in the libavoid function
	  Router::attachedConns().  Previously unused, but needed by Tim
	  for new Graph Layout code.

2006-07-13  Jon Phillips  <jon@rejon.org>

	* src/inkview: Added commandline option capability to inkview and 
	  got code ready to add a timer for an automatic slideshow capability.

2006-07-12 Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libvpsc/*,
	  src/libcola/*,
	  src/graphlayout/graphlayout.cpp,
	  src/removeoverlaps/removeoverlaps.cpp:
	  Boost graph layout algorithms replaced by custom constraint layout
	  algorithm (implemented in libcola).  New layout supports constraints
	  such as downward pointing connectors (directed graph layout) or
	  non-overlapping shapes.
	  libvpsc contains updated code for quadratic program solver used by
	  libcola and removeoverlaps.  Fixes bug #1441411.
